--- a/Sonic4_Tools/OldModConversionTool/OldModConversionTool.csproj
+++ b/Sonic4_Tools/OldModConversionTool/OldModConversionTool.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{4368B51B-2856-47A3-BF94-3B99FF7F8C7F}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>OldModConversionTool</RootNamespace>
     <AssemblyName>OldModConversionTool</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
