--- a/Sonic4_Tools/TXBEditor/TXBEditor.csproj
+++ b/Sonic4_Tools/TXBEditor/TXBEditor.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{AFE031DF-2DD6-480E-BDFC-AAE610F46CEC}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>TXBEditor</RootNamespace>
     <AssemblyName>TXBEditor</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
