--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,11 @@ jobs:
     - name: Upload artifact (Main)
       uses: actions/upload-artifact@v1.0.0
       with:
+        name: Sonic4_Tools.7z
         path: dist/Sonic4_Tools.7z
 
     - name: Upload artifact (SHA256 sums)
       uses: actions/upload-artifact@v1.0.0
       with:
+        name: SHA256SUMS
         path: dist/SHA256SUMS
