Found a way to include code as simple as possible

--- a/Sonic4_Tools/AMAEditor/AMAEditor.csproj
+++ b/Sonic4_Tools/AMAEditor/AMAEditor.csproj
@@ -45,6 +45,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\SanityChecker.cs">
+      <Link>SanityChecker.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
@@ -53,12 +56,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SanityChecker\SanityChecker.csproj">
-      <Project>{8A5E4278-A300-464C-845A-1D445AA76F29}</Project>
-      <Name>SanityChecker</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
