--- a/Sonic4_Tools/TXBEditor/TXBEditor.csproj
+++ b/Sonic4_Tools/TXBEditor/TXBEditor.csproj
@@ -28,10 +28,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\SanityChecker.cs">
+      <Link>SanityChecker.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
