--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,35 @@
-name: CI
+name: Main
 
 on:
   push:
-    branches: [ master ]
+    branches:
+     - "**"
   pull_request:
-    branches: [ master ]
+    branches:
+     - "**"
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: |
-        python3 fix_sh_newline.py
-        bash update_dependencies.sh
-        bash build_pack.sh
-    
-    - name: Upload artifact (Main)
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        name: Sonic4_Tools.7z
-        path: dist/Sonic4_Tools.7z
+      - uses: actions/checkout@v2
 
-    - name: Upload artifact (SHA256 sums)
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        name: SHA256SUMS
-        path: dist/SHA256SUMS
+      - name: Update dependencies
+        run: bash update_dependencies.sh
+
+      - name: Build
+        run: bash build_pack_test.sh
+        
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Tools
+          path: dist/*.7z
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: SHA256 sums
+          path: dist/SHA256SUMS
