--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: bash update_dependencies.sh
 
       - name: Build
-        run: bash build_pack_test.sh
+        run: bash build_pack.sh
         
       - uses: actions/upload-artifact@v2
         with:
